# video_parser

./: .gitignore  Dockerfile  README.md  pyproject.toml
Problem_1/: Problem_1.docx
jupyterhub/: .dockerignore  Dockerfile.notebook_image  README.md  docker-compose.yaml  jupyterhub_config.py  start-notebook.sh  start-singleuser.sh
terraform/: README.md  main.tf  start-up-script.sh  terraform.tfstate  terraform.tfstate.backup
video_parser/: video_parser.py
