[tool.poetry]
name = "video_parser"
version = "0.1.0"
description = "A video parsing library"
authors = ["Stuart Farris <sfarris@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python-headless = "^4.5.3"
pytesseract = "^0.3.8"
pandas = "^1.3.3"
tqdm = "^4.62.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
video_parser = 'video_parser.video_parser:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
